--- a/packages/reports/app/styles/navi-reports/components/report-builder/sidebar.scss
+++ b/packages/reports/app/styles/navi-reports/components/report-builder/sidebar.scss
@@ -45,6 +45,7 @@
 
   &__separator {
     background-color: $menu-border-color;
+    margin: 0;
   }
 
   &__content {
